--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -46,14 +46,14 @@
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "\n",
-    "ndegrees = 14\n",
-    "mean_folds_error_deg = np.zeros(ndegrees)\n",
-    "for degree in range(1,ndegrees+1):\n",
-    "    X = create_X(x,y,degree)\n",
-    "    t = FrankeFunction(x, y) + 0.5*np.random.randn(n)\n",
+    "#ndegrees = 14\n",
     "\n",
+    "for degree in (1,3,6,11):\n",
+    "    X = create_X(x,y,degree)\n",
+    "    t = FrankeFunction(x, y) + 0.4*np.random.randn(n)\n",
     "\n",
     "    mean_folds_error = np.zeros(6)\n",
+    "    mse_std_arr = np.zeros(6)\n",
     "    for folds in range(5,11):\n",
     "        #create LinearRegression model object from SK to use in sk.cross_val_score\n",
     "        sk_model = linear_model.LinearRegression()\n",
@@ -61,21 +61,30 @@
     "        sk_scores = cross_val_score(sk_model, X, t.ravel(), cv=folds, scoring = \"neg_mean_squared_error\")\n",
     "        \n",
     "\n",
-    "        implemented_scores = cross_val(k = folds, model = \"OLS\", X = X, z = t, shuffle=True)\n",
-    "        plt.plot(np.arange(1,folds+1), implemented_scores,\"-o\", label = f\"Splitted in {folds} folds\")\n",
-    "        #plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
-    "        plt.xlabel(\"MSE at testfold number\")\n",
-    "        plt.ylabel(\"MSE\")\n",
-    "        plt.title(f\"Complexity degree: {degree} \")\n",
-    "        plt.ylim(0,1)\n",
-    "        plt.xticks(np.arange(1,folds+1))\n",
-    "        plt.grid(True)\n",
-    "        plt.legend()\n",
+    "        implemented_scores = cross_val(k = folds, model = \"OLS\", X = X, z = t, shuffle=True, scale = True)\n",
+    "        # plt.plot(np.arange(1,folds+1), implemented_scores,\"-o\", label = f\"Splitted in {folds} folds\")\n",
+    "        # #plt.plot(np.arange(folds), sk_scores*-1,\"--o\", label = f\"{folds} folds(sk.cv)\")\n",
+    "        # plt.xlabel(\"MSE at testfold number\")\n",
+    "        # plt.ylabel(\"MSE\")\n",
+    "        # plt.title(f\"Complexity degree: {degree} \")\n",
+    "        # plt.ylim(0,1)\n",
+    "        # plt.xticks(np.arange(1,folds+1))\n",
+    "        # plt.grid(True)\n",
+    "        # plt.legend()\n",
     "        mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
-    "        mean_folds_error_deg[degree-1] = np.mean(mean_folds_error)\n",
-    "    plt.plot()\n",
-    "    plt.show()\n",
-    "    # print(sk_scores)\n"
+    "        mse_std_arr[folds-5] = np.std(implemented_scores)\n",
+    "        \n",
+    "        \n",
+    "    plt.errorbar(np.arange(5,11), mean_folds_error, yerr = mse_std_arr, fmt='o--', ecolor='deeppink', capthick=2)\n",
+    "    plt.title(f\"Model complexity: {degree} degrees\")\n",
+    "    plt.xlabel(\"K-fold\")\n",
+    "    plt.ylabel(\"MSE\")\n",
+    "    #plt.errorbar(np.arange(5,11), mse_std_arr)\n",
+    "    plt.ylim(0,0.5)\n",
+    "    plt.xticks(np.arange(5,11))\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    plt.show()\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -83,21 +92,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "plt.plot(np.arange(1,ndegrees+1), mean_folds_error_deg, \"-o\")\n",
-    "plt.xlabel(\"Model Complextity (degrees)\")\n",
-    "plt.ylabel(\"mean MSE over all folds\")\n",
-    "plt.title(f\"Complexity degree: {degree} \")\n",
-    "plt.ylim(0,1)\n",
-    "plt.xticks(np.arange(1,ndegrees+1))\n",
-    "plt.grid(True)\n"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
