--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -47,6 +47,7 @@
     "x,y = np.meshgrid(x,y)\n",
     "\n",
     "#ndegrees = 14\n",
+    "bootstrap_MSE_std = pd.read_csv(f\"{REPORT_DATA}EX2_bootstrap_test_MSE.csv\")\n",
     "\n",
     "for degree in (1,3,6,11):\n",
     "    X = create_X(x,y,degree)\n",
@@ -76,11 +77,14 @@
     "        \n",
     "        \n",
     "    plt.errorbar(np.arange(5,11), mean_folds_error, yerr = mse_std_arr, fmt='o--', ecolor='deeppink', capthick=2)\n",
+    "    boot_vals = bootstrap_MSE_std.iloc[degree, 1:4]\n",
+    "    plt.plot(np.arange(5,11), np.ones(6)*boot_vals[1], \"o-\")\n",
+    "    plt.fill_between(np.arange(5,11),np.ones(6)*boot_vals[1]-boot_vals[2], np.ones(6)*boot_vals[1]+boot_vals[2], alpha=0.2) \n",
     "    plt.title(f\"Model complexity: {degree} degrees\")\n",
     "    plt.xlabel(\"K-fold\")\n",
     "    plt.ylabel(\"MSE\")\n",
     "    #plt.errorbar(np.arange(5,11), mse_std_arr)\n",
-    "    plt.ylim(0,0.5)\n",
+    "    plt.ylim(0,1)\n",
     "    plt.xticks(np.arange(5,11))\n",
     "    plt.grid(True)\n",
     "\n",
@@ -90,9 +94,19 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Compare MSE from CV with bootstrap: "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "bootstrap_MSE_std = pd.read_csv(f\"{REPORT_DATA}EX2_bootstrap_test_MSE.csv\")\n",
+    "bootstrap_MSE_std"
+   ],
    "outputs": [],
    "metadata": {}
   },
