Some scaling and splitting

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -45,4 +45,25 @@
  year={2011}
 }
 
+@Book{Davison1997,
+  author    = {A. C. Davison and D. V. Hinkley},
+  publisher = {Cambridge University Press},
+  title     = {Bootstrap Methods and their Application},
+  year      = {1997},
+  month     = {oct},
+  doi       = {10.1017/cbo9780511802843},
+}
+
+@Book{Geron2019,
+  author    = {Géron, Aurélien},
+  publisher = {O'Reilly UK Ltd.},
+  title     = {Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow},
+  year      = {2019},
+  isbn      = {1492032646},
+  month     = oct,
+  ean       = {9781492032649},
+  pagetotal = {819},
+  url       = {https://www.ebook.de/de/product/33315532/aurelien_geron_hands_on_machine_learning_with_scikit_learn_keras_and_tensorflow.html},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
