--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -217,7 +217,7 @@
     "    \n",
     "    # Scaling data and splitting it into training and test sets\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
-    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=False, scale_t=False, random_state=4155)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, scale_t=False, random_state=4155)\n",
     "    \n",
     "    # Model construction, fitting, and predictions using matrix inversion\n",
     "    model = OLS() # The model\n",
@@ -273,6 +273,7 @@
     "\n",
     "        \n",
     "    # Printing results\n",
+    "    \"\"\"\n",
     "    print(f\"Degree: {degree}\")\n",
     "    print(f\"Train data - Mean Square Error: {MSE_score_train}\")\n",
     "    print(f\"Train data - R2 score: {R2_score_train}\")\n",
@@ -282,7 +283,7 @@
     "    print(f\"Beta - values{betas}\")\n",
     "    print(f\"Beta - Std Errors: {SE_betas}\")\n",
     "    print(f\"Beta - Confidence Interval (CI):\\n{CL}\\n\")\n",
-    "\n",
+    "    \"\"\"\n",
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
@@ -339,8 +340,8 @@
     "plt.figure(figsize=(12,8))\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train, c=\"c\", label=\"Training data\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test, c=\"m\", label=\"Test data\")\n",
-    "#plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
-    "#plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
+    "plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
+    "plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train_sk, \"r--\", label=\"Training data sklearn\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test_sk, \"y--\", label=\"Test data sklearn\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
@@ -616,7 +617,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -628,10 +629,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "interpreter": {
-   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
