staged for merge

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -68,6 +68,7 @@
     "ax1.set_zlim(-0.10, 1.40)\n",
     "ax1.zaxis.set_major_locator(LinearLocator(10))\n",
     "ax1.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_nonoise_preview.pdf\")\n",
     "\n",
     "# Ploting frankefunction with noise\n",
     "fig = plt.figure()\n",
