--- a/bibliography.bib
+++ b/bibliography.bib
@@ -66,4 +66,12 @@
   url       = {https://www.ebook.de/de/product/33315532/aurelien_geron_hands_on_machine_learning_with_scikit_learn_keras_and_tensorflow.html},
 }
 
+@book{Goodfellow2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
