Fixed noise_factor bug, LASSO is working

--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -19,16 +19,16 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import numpy as np\r\n",
-    "import sklearn.linear_model as lm\r\n",
-    "from sklearn.preprocessing import PolynomialFeatures\r\n",
-    "from sklearn.model_selection import train_test_split\r\n",
-    "from sklearn.pipeline import make_pipeline\r\n",
-    "from sklearn.utils import resample\r\n",
-    "from common import *\r\n",
-    "from sklearn.preprocessing import StandardScaler\r\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import sklearn.linear_model as lm\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.utils import resample\n",
+    "from common import *\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm import tqdm"
    ],
    "outputs": [],
@@ -38,17 +38,17 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "\r\n",
-    "\r\n",
-    "np.random.seed(SEED_VALUE)\r\n",
-    "maxdegree = 15\r\n",
-    "n_bootstraps = 40\r\n",
-    "n = 20\r\n",
-    "x = np.sort(np.random.uniform(0, 1, n))\r\n",
-    "y = np.sort(np.random.uniform(0, 1, n))\r\n",
-    "x,y = np.meshgrid(x,y)\r\n",
-    "z = FrankeFunction(x,y) + 0.2*np.random.normal(0, size = n)\r\n",
-    "print(type(x))\r\n",
+    "\n",
+    "\n",
+    "np.random.seed(SEED_VALUE)\n",
+    "maxdegree = 15\n",
+    "n_bootstraps = 40\n",
+    "n = 20\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x,y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x,y) + noise_factor(n, factor=0.05)\n",
+    "print(type(x))\n",
     "print(x.shape)"
    ],
    "outputs": [],
@@ -65,21 +65,21 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "polydegree = np.arange(1, maxdegree+1)\r\n",
-    "MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, OLS())\r\n",
-    "\r\n",
-    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\r\n",
-    "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\r\n",
-    "plt.plot(polydegree, bias,\"b--\", label='bias')\r\n",
-    "plt.plot(polydegree, variance,\"r--\", label='Variance')\r\n",
-    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\r\n",
-    "\r\n",
-    "plt.xlabel(\"Model complexity / Polynomial Degree\")\r\n",
-    "plt.ylabel(\"Prediction Error - MSE\")\r\n",
-    "plt.xticks(polydegree)\r\n",
-    "plt.grid(True)\r\n",
-    "plt.legend()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function.pdf\")\r\n",
+    "polydegree = np.arange(1, maxdegree+1)\n",
+    "MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, OLS())\n",
+    "\n",
+    "plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "#plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "\n",
+    "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "plt.ylabel(\"Prediction Error - MSE\")\n",
+    "plt.xticks(polydegree)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function.pdf\")\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -355,7 +355,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.11",
+   "version": "3.9.7",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -367,10 +367,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('pytorch1': conda)"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "interpreter": {
-   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
