--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -45,7 +45,7 @@
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
-    "t = FrankeFunction(x, y) + noise_factor(n)\n",
+    "t = FrankeFunction(x, y) + noise_factor(n, factor=0.05)\n",
     "ndegrees = 14\n",
     "\n",
     "boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, ndegrees, 20, OLS())\n",
