--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -62,7 +62,7 @@
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "t_nonoise = FrankeFunction(x, y)\n",
-    "t = t_nonoise + noise_factor(n)\n",
+    "t = t_nonoise + noise_factor(n, factor=0.05)\n",
     "ndegrees = 7\n",
     "min_lambda = -4 \n",
     "max_lambda = 4 \n",
