--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -61,7 +61,7 @@
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "X = create_X(x,y, n = degree)\n",
-    "z = FrankeFunction(x, y) + 0.2*np.random.normal(0, size = n)"
+    "z = FrankeFunction(x, y) + noise_factor(n, factor=0.1)"
    ],
    "outputs": [],
    "metadata": {}
@@ -78,7 +78,7 @@
    "execution_count": null,
    "source": [
     "nbf_lambdas = 20\n",
-    "lambdas = np.logspace(-4, 1, nbf_lambdas)\n",
+    "lambdas = np.logspace(-2, 1, nbf_lambdas)\n",
     "z_train_lasso = pd.DataFrame()\n",
     "z_hat_train_lasso = pd.DataFrame()\n",
     "z_test_lasso = pd.DataFrame()\n",
@@ -94,19 +94,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, random_state=SEED_VALUE)\n",
+    "X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X = True, random_state=SEED_VALUE)\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "scaler.fit(X_train)\n",
-    "X_train_scaled = scaler.transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
+    "for i in tqdm(range(len(lambdas)), f\"Looping through lambdas up to {nbf_lambdas}: \"):\n",
+    "    clf = lm.Lasso(lambdas[i], fit_intercept=False)\n",
+    "    clf.fit(X_train, z_train)\n",
     "\n",
-    "for i in range(len(lambdas)):\n",
-    "    clf = lm.Lasso(lambdas[i])\n",
-    "    clf.fit(X_train_scaled, z_train)\n",
-    "\n",
-    "    z_pred = clf.predict(X_test_scaled)\n",
-    "    z_fit = clf.predict(X_train_scaled)\n",
+    "    z_pred = clf.predict(X_test)\n",
+    "    z_fit = clf.predict(X_train)\n",
     "\n",
     "    MSE_test[i] = np.mean( np.mean((z_test - z_pred)**2) )\n",
     "    MSE_train[i] = np.mean( np.mean((z_train - z_fit)**2) )\n",
@@ -117,7 +112,7 @@
     "plt.xlabel('log10(lambda)')\n",
     "plt.ylabel('MSE')\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.savefig(f\"{REPORT_FIGURES}{EX5}LASSO_MSE_initial.pdf\")\n"
    ],
    "outputs": [],
    "metadata": {}
