Tentative conclusion of Ex1

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -73,7 +73,7 @@
     "# Ploting frankefunction with noise\n",
     "fig = plt.figure()\n",
     "ax2 = fig.add_subplot(111, projection='3d')\n",
-    "ax2.title.set_text(\"Plot of the Franke Function\\n(noise added)\")\n",
+    "ax2.title.set_text(\"Plot of the Franke Function\\n(0.05*Gaussian Noise added)\")\n",
     "ax2.view_init(elev=30., azim=-25.0)\n",
     "ax2.set_xlabel(\"x\"); ax2.set_ylabel(\"y\"); ax2.set_zlabel(\"z\")\n",
     "surf2 = ax2.plot_surface(x,y,z_noisy, cmap=cm.coolwarm, linewidth = 0, antialiased=False)\n",
@@ -111,11 +111,7 @@
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x, y = np.meshgrid(x,y)\n",
-    "z = FrankeFunction(x, y) \n",
-    "noise = 0.5 * np.random.randn(n,n) # Stochastic noise\n",
-    "#noise = 0.7 * np.random.randn(n) # Stochastic noise\n",
-    "z_noise = z + noise # separate Franke with noise\n",
-    "z += noise # Adding stochastic noise"
+    "z = FrankeFunction(x, y) + noise_factor(n,factor=0.05)"
    ],
    "outputs": [],
    "metadata": {}
@@ -341,8 +337,8 @@
     "plt.figure(figsize=(12,8))\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train, c=\"c\", label=\"Training data\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test, c=\"m\", label=\"Test data\")\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
+    "#plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
+    "#plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train_sk, \"r--\", label=\"Training data sklearn\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test_sk, \"y--\", label=\"Test data sklearn\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
@@ -410,9 +406,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "suboptimal_degree_coeffs = coeffs_df[coeffs_df['degree'] == 2]\n",
+    "fig = plot_beta_errors(suboptimal_degree_coeffs, 2)\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{2}.pdf\")\n",
+    "\n",
     "optimal_degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == optimal_degree]\n",
     "display(optimal_degree_coeffs)\n",
     "optimal_degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree.csv\")\n",
+    "\n",
+    "\n",
     "\n",
     "fig = plot_beta_errors(optimal_degree_coeffs, optimal_degree)\n",
     "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{optimal_degree}.pdf\")"
@@ -423,9 +425,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Repeat of the previous exercise, this time with scaled data to study the difference for OLS with and without scaled data\n",
-    "(Hint: there should be no difference in MSE for OLS given scaled data)"
+    "Repeat of the previous exercise, this time with double the amount of added noise. (0.05 -> 0.1)"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "np.random.seed(4155)\n",
+    "n = 100 # The number of points in direction for the Franke Function\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x, y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x, y) + noise_factor(n,factor=0.1)"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -451,11 +466,11 @@
     "coeffs_df = pd.DataFrame()\n",
     "\n",
     "for degree in range(1, degrees+1):\n",
-    "    X = create_X(x, y, degree)[:,1:] # Design Matrix\n",
+    "    X = create_X(x, y, degree) # Design Matrix\n",
     "    \n",
     "    # Scaling data and splitting it into training and test sets\n",
     "    #X_train, X_test, z_train, z_test = prepare_data(X, z, test_size=0.2, shuffle=True, scale_X=False, scale_t=False)\n",
-    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, scale_t=True, zero_center = True, random_state=4155)\n",
+    "    X_train, X_test, z_train, z_test = prepare_data(X, z.ravel(), test_size=0.2, shuffle=True, scale_X=True, scale_t=False, zero_center = False,random_state=4155)\n",
     "    \n",
     "    # Model construction, fitting, and predictions using matrix inversion\n",
     "    model = OLS() # The model\n",
@@ -468,7 +483,7 @@
     "    z_hat_test_svd = model.predict(X_test)\n",
     "\n",
     "    # Model construction, fitting and predictions using sklearn\n",
-    "    model_sk = lm.LinearRegression(fit_intercept=False)\n",
+    "    model_sk = lm.LinearRegression()\n",
     "    model_sk.fit(X_train, z_train)\n",
     "    z_hat_train_sk = model_sk.predict(X_train)\n",
     "    z_hat_test_sk = model_sk.predict(X_test)\n",
@@ -524,10 +539,10 @@
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
-    "                                 \"coeff name\": [f\"b{i}\" for i in range(1,betas.shape[0]+1)],\n",
-    "                                 \"coeff value\": np.round(betas, decimals=4),\n",
-    "                                 \"Std Error\": np.round(SE_betas, decimals=4),\n",
-    "                                 \"CI lower\":np.round(CI_lower_all_betas, decimals=4), \n",
+    "                                 \"coeff_name\": [f\"b{i}\" for i in range(1,betas.shape[0]+1)],\n",
+    "                                 \"coeff_value\": np.round(betas, decimals=4),\n",
+    "                                 \"std_error\": np.round(SE_betas, decimals=4),\n",
+    "                                 \"CI_lower\":np.round(CI_lower_all_betas, decimals=4), \n",
     "                                 \"CI_upper\":np.round(CI_upper_all_betas, decimals=4)},\n",
     "                                 orient='index').T\n",
     "    coeffs_df = pd.concat([coeffs_df,df], axis=0)\n",
@@ -548,6 +563,9 @@
     "\n",
     "mse_scores_train_svd = ((z_train_OLS - z_hat_train_SVD) ** 2).mean()\n",
     "mse_scores_test_svd = ((z_test_OLS - z_hat_test_SVD) ** 2).mean()\n",
+    "\n",
+    "mse_scores_train_sk = ((z_train_OLS - z_hat_train_SK) ** 2).mean()\n",
+    "mse_scores_test_sk = ((z_test_OLS - z_hat_test_SK) ** 2).mean()\n",
     "# R2 calculations for all lambda values\n",
     "#R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \n",
     "#R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()"
@@ -563,8 +581,8 @@
     "plt.figure(figsize=(12,8))\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train, c=\"c\", label=\"Training data\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test, c=\"m\", label=\"Test data\")\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
-    "plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
+    "#plt.plot(np.arange(1,degrees+1), mse_scores_train_svd, \"b--\", label=\"Training data SVD\")\n",
+    "#plt.plot(np.arange(1,degrees+1), mse_scores_test_svd, \"g--\", label=\"Test data SVD\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_train_sk, \"r--\", label=\"Training data sklearn\")\n",
     "plt.plot(np.arange(1,degrees+1), mse_scores_test_sk, \"y--\", label=\"Test data sklearn\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
@@ -573,8 +591,21 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit.pdf\")\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
     "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "optimal_degree_coeffs = coeffs_df[coeffs_df[\"degree\"] == 5]\n",
+    "display(optimal_degree_coeffs)\n",
+    "optimal_degree_coeffs.to_csv(f\"{REPORT_DATA}{EX1}coeffs_optimal_degree_dn.csv\")\n",
+    "fig = plot_beta_errors(optimal_degree_coeffs, 5)\n",
+    "fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{5}_dn.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
