--- a/main.tex
+++ b/main.tex
@@ -239,6 +239,9 @@ By inspecting Figure (\ref{fig:OLS_franke_1}), we can see that there are no visu
 
 
 \section*{Exercise 2}
+\subsection*{Some words on bootstrapping}
+
+
 Moving on to the bias-variance trade-off analysis, we start off by showing that 
 
 \[
