Some introduction to Ridge

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -74,4 +74,17 @@
     year={2016}
 }
 
+@Article{Wolpert1996,
+  author    = {David H. Wolpert},
+  journal   = {Neural Computation},
+  title     = {The Lack of A Priori Distinctions Between Learning Algorithms},
+  year      = {1996},
+  month     = {oct},
+  number    = {7},
+  pages     = {1341--1390},
+  volume    = {8},
+  doi       = {10.1162/neco.1996.8.7.1341},
+  publisher = {{MIT} Press - Journals},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
