--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -3,10 +3,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Exercise 4: Ridge Regression on the Franke function with resampling (score 20 points)\r\n",
-    "\r\n",
-    "Write your own code for the Ridge method, either using matrix inversion or the singular value decomposition as done in the previous exercise. Perform the same bootstrap analysis as in the Exercise 2 (for the same polynomials) and the cross-validation in exercise 3 but now for different values of λ. Compare and analyze your results with those obtained in exercises 1-3. Study the dependence on λ.\r\n",
-    "\r\n",
+    "# Exercise 4: Ridge Regression on the Franke function with resampling (score 20 points)\n",
+    "\n",
+    "Write your own code for the Ridge method, either using matrix inversion or the singular value decomposition as done in the previous exercise. Perform the same bootstrap analysis as in the Exercise 2 (for the same polynomials) and the cross-validation in exercise 3 but now for different values of λ. Compare and analyze your results with those obtained in exercises 1-3. Study the dependence on λ.\n",
+    "\n",
     "Study also the bias-variance trade-off as function of various values of the parameter λ. For the bias-variance trade-off, use the bootstrap resampling method. Comment your results."
    ],
    "metadata": {}
@@ -57,17 +57,17 @@
    "source": [
     "#generate some data: \n",
     "np.random.seed(SEED_VALUE)\n",
-    "n = 30\n",
+    "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "t_nonoise = FrankeFunction(x, y)\n",
-    "t = t_nonoise + noise_factor(n, factor=0.05)\n",
-    "ndegrees = 7\n",
-    "min_lambda = -4 \n",
+    "t = t_nonoise + noise_factor(n, factor=0.1)\n",
+    "degree = 6\n",
+    "min_lambda = -9\n",
     "max_lambda = 4 \n",
-    "nbf_lambdas = 10\n",
-    "lambdas = np.logspace(min_lambda,max_lambda, nbf_lambdas)"
+    "nlambdas = 500\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)"
    ],
    "outputs": [],
    "metadata": {}
@@ -85,16 +85,15 @@
    "source": [
     "# NO NOISE\n",
     "\n",
-    "X = create_X(x,y,ndegrees)\n",
+    "X = create_X(x,y,degree)\n",
     "X_train, X_test, t_train, t_test = prepare_data(X,t_nonoise.ravel(), scale_X=True)\n",
     "\n",
     "X_train = X_train[:,1:]\n",
     "X_test = X_test[:,1:]\n",
     "\n",
-    "nlambdas = 500\n",
-    "MSERidgePredict = np.zeros(500)\n",
-    "MSEOurRidge = np.zeros(500)\n",
-    "lambdas = np.logspace(-9, 4, nlambdas)\n",
+    "MSERidgePredict = np.zeros(nlambdas)\n",
+    "MSEOurRidge = np.zeros(nlambdas)\n",
+    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
     "for i in range(nlambdas):\n",
     "    lmb = lambdas[i]\n",
     "\n",
@@ -151,17 +150,17 @@
    "source": [
     "# NOISE and OLS for comparison\n",
     "\n",
-    "X = create_X(x,y,ndegrees)\n",
+    "X = create_X(x,y,degree)\n",
     "X_train, X_test, t_train, t_test = prepare_data(X,t.ravel(), scale_X=True)\n",
     "\n",
     "X_train = X_train[:,1:]\n",
     "X_test = X_test[:,1:]\n",
     "\n",
     "nlambdas = 500\n",
-    "MSERidgePredict = np.zeros(500)\n",
-    "MSEOurRidge = np.zeros(500)\n",
-    "MSEols = np.zeros(500)\n",
-    "lambdas = np.logspace(-9, 4, nlambdas)\n",
+    "MSERidgePredict = np.zeros(nlambdas)\n",
+    "MSEOurRidge = np.zeros(nlambdas)\n",
+    "MSEols = np.zeros(nlambdas)\n",
+    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
     "for i in range(nlambdas):\n",
     "    lmb = lambdas[i]\n",
     "\n",
@@ -184,7 +183,7 @@
     "    MSEols[i] = MSE(t_test, olspredict)\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(np.log10(lambdas), MSERidgePredict, 'g--', label = 'MSE SL Ridge Test')\n",
+    "plt.plot(np.log10(lambdas), MSERidgePredict, 'g', label = 'MSE SL Ridge Test')\n",
     "plt.plot(np.log10(lambdas), MSEOurRidge, 'r--', label = \"MSE Our Ridge Test\")\n",
     "plt.plot(np.log10(lambdas), MSEols, 'b--', label = \"MSE Our OLS Test\")\n",
     "plt.xlabel('log10(lambda)')\n",
@@ -208,10 +207,10 @@
    "source": [
     "\n",
     "for lmb in lambdas:\n",
-    "    boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, ndegrees, 20, RidgeRegression(lmb))\n",
+    "    boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, t, degree, 20, RidgeRegression(lmb))\n",
     "    boot_strp_std = np.sqrt(boot_strp_variance)\n",
     "\n",
-    "    for degree in range(1,ndegrees):\n",
+    "    for degree in range(1,degree):\n",
     "        X = create_X(x,y,degree)\n",
     "    \n",
     "    \n",
@@ -247,7 +246,7 @@
     "        plt.title(f\"Model complexity: {degree} degrees, log($\\lambda$):{np.log10(lmb)} \")\n",
     "        plt.xlabel(\"K-fold\")\n",
     "        plt.ylabel(\"MSE\")\n",
-    "        plt.ylim(0,0.5)\n",
+    "        plt.ylim(0,0.1)\n",
     "        plt.xticks(np.arange(5,11))\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
@@ -645,7 +644,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.8",
+   "version": "3.9.7",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -657,10 +656,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "interpreter": {
-   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   }
  },
  "nbformat": 4,
